# Multilingual-Federated-Learning

./: .gitignore  README.md  constants.py  create_naacl_plots.py  dataset_utils.py  main_lm.py  pyproject.toml
create_data/make_europarl_data_for_lm/: README.md  clean_and_split_data.py  copy_to_data_folder.sh  download_files.sh
create_data/make_mtnt_data/: README.md  copy_to_data_folder.sh  download.sh  preprocess.sh  remove_too_much_punc.py  sample_train_test_data.py
create_data/make_nc_data/: README.md  copy_to_data_folder.sh  download.sh  sample_train_test_data.py
create_data/make_un_data_for_lm/: README.md  copy_to_data_folder.sh  download_files.sh  gather_exclusive_paths.py  sample_train_test_data.py  unzip_all.sh
create_data/make_un_data_for_mt/: README.md  copy_to_data_folder.sh  download_files.sh  sample_train_test_data.py  unzip_all.sh
enviroment_setup/: activate_poetry.sh  install_poetry.sh  readme.md
plots_and_data_for_paper/: lm_individual.csv  mt_individual.csv  readme.md
